# vibedesign

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  test_websocket.js  tsconfig.json
.cursor/notepads/: General Notepad.md
.cursor/rules/: rule-1.mdc  rule-2.mdc
docs/: AI_INTEGRATION.md  AI_TOOLS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  FIGMA_PLUGIN_DEVELOPMENT.md  PRACTICAL_EXAMPLES.md  TEST_GUIDE.md  USER_GUIDE.md  WORKFLOW_GUIDE.md
figma_plugin/: .eslintrc.json  manifest.json  package-lock.json  package.json  tsconfig.json  ui.html  webpack.config.js
figma_plugin/src/: figma.d.ts  plugin.ts  types.ts  ui.css  ui.html  ui.tsx  websocket.ts
figma_plugin/styles/: main.css
mcp_server/: README.md  config.py  minimal_test.py  server.py  test_basic.py  test_generate_code.py  test_mock.py  types.py
mcp_server/tests/: test_e2e.py  test_figma_api.py  test_llm_adapter.py  test_llm_service.py  test_performance.py  test_prompt_manager.py  test_websocket.py
mcp_server/tools/: __init__.py  design_analyzer.py  event_processor.py  figma_api.py  llm.py  llm_adapter.py  llm_factory.py  logger.py  metrics.py  openai_adapter.py  prompt_manager.py  websocket.py
scripts/: run_example.py  setup_environment.py
src/: index.ts
src/core/: mcp-server.ts
src/services/: design-tokens.ts  enhanced-figma-api.ts  figma-api.ts  figma-plugin.ts  websocket-client.ts
src/tools/: create-design-token.ts  create-frame.ts  create-rectangle.ts  (+14 more)
tests/: test_figma_api.py
(+34 files in other folders)
