[project]
name = "vibe-design"
version = "0.1.0"
description = "Figma design automation tool with AI and MCP"
authors = [
    {name = "Stas Neprokin", email = "neprokin@gmail.com"},
]
dependencies = [
    "fastmcp>=0.1.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "pytest-asyncio>=0.25.3",
    "aiohttp>=3.11.14",
    "aioresponses>=0.7.8",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = []

[tool.ruff.isort]
force-single-line = true
lines-after-imports = 2

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
] 